<resources>
    <string name="app_name">Campus Finder</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>

    <!-- Facebook application ID and custom URL scheme (app ID prefixed by 'fb'). -->
    <string name="facebook_application_id" translatable="false">1:598484073444:android:cf3c7c456e2ea578</string>
    <string name="facebook_login_protocol_scheme" translatable="false">722062088163122</string>

    <string name="title_activity_menu">@string/app_name</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_outdoor_map">Outdoor Map</string>
    <string name="menu_indoor_map">Indoor Map</string>
    <string name="menu_saved_places">Saved Places</string>
    <string name="menu_log_out">Log Out</string>
    <string name="title_activity_outdoor_map">Map</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_wifi_indoor_location">Enable WiFi Indoor Location</string>
    <string name="pref_description_wifi_indoor_location">Automatic indoor location if WiFi Access Points are available</string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_maps">Map</string>

    <!-- SavedPlace Fragment Strings-->
    <string name="search_here">Search here</string>
    <string name="go_to">Go to</string>

    <!-- tomtom -->
    <string name="geocode_no_results">No geocoder results. Choose different location and try again.</string>
    <string name="api_response_error">API response error: \'%1$s\'.</string>
    <string name="poi_name_key">poiNamFe</string>
    <string name="address_key">address</string>
    <string name="poisearch_hint">Search for a place</string>
    <string name="no_search_results">No search results for \'%1$s\'. Please try another search term.</string>
    <string name="add_to_my_route">Add to my route</string>
    <string name="save_to_my_list">Save to my list</string>

    <!-- Success Messages -->
    <string name="place_saved_successffully">Place saved successfully</string>

    <!-- Error Messages -->
    <string name="general_error_message">An error occurred</string>
    <string name="error_saving_place">An error occurred while saving</string>
    <string name="on_fragment_intercation_listener">must implement OnFragmentInteractionListener</string>

    <!-- Keys -->
    <string name="place_name">Place name</string>

    <!-- Firebase Paths -->
    <string name="user_savedplaces">/user_savedplaces/%1$s/</string>
    <string name="name">name</string>

    <!-- Others -->
    <string name="empty_string"/>
    <string name="uf8ff">\uf8ff</string>



</resources>
